# morsecord

./: .gitignore  Cargo.toml
src/: cw_audio.rs  lib.rs  main.rs  morse.rs
src/bot/: mod.rs
src/bot/commands/: cw.rs  cw_lesson.rs  mod.rs  neko.rs  vc.rs
src/commands/: cw.rs  mod.rs  neko.rs  vc.rs
src/modes/: call_lesson.rs  mod.rs  normal.rs
src/modes/lesson/: acag_number.rs  allja_number.rs  callsign.rs  file.rs  japanese.rs  mod.rs  number.rs
