[package]
name = "morsecord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
serenity = { version = "0.11.6", features = ["framework", "standard_framework", "voice"] }
songbird = { version = "0.3.2", features = ["yt-dlp"] }
sqlx = { version = "0.7.0", features = ["sqlite", "runtime-tokio"], default-features = false }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"
wav = "1.0.0"
